corrected styling on mobile issues, added dropdown for nav buttons on small screen

--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -66,7 +66,7 @@ body {
     background: rgba(68, 68, 68, 0.808);
     border-radius: 5px;
     border: 3px solid rgba(233, 233, 233, 0.808);
-    max-width: 35vw;
+    max-width: 50vw;
   }
   .splash-bg {
     background: url('../../images/chef-hands-steak-plate.jpg') no-repeat center fixed;
@@ -79,13 +79,39 @@ body {
     border: 5px solid rgba(109, 109, 109, 0.808);
     border-radius: 5px;
   }
-  
-  // .splashBtns {
-  //   background: rgba(68, 68, 68, 0.808);
-  //   border: 1px solid rgba(233, 233, 233, 0.808);
-  //   border-radius: 5px;
-  // }
+ 
+  @media screen and (max-width: 992px) {
+    
+    // styles for medium screens and down
+    .splashBtns {
+      margin-top: 10px;
+    }
+    .splash-bg {
+      min-height: 75vh;
+      min-width: 65vw;
+    }
+    .header-background{
+      min-width: 90vw;
+      .header {
+        font-size: 25px;
+      }
+    }
 
+    table {
+      max-width: 95vw;
+      th {
+        font-size: 12px;
+      }
+      td{
+        font-size: 12px;
+      }
+    }
+    #signup{
+      font-size: 8px;
+    }
+
+  }
+  
   .jumbo {
     background: url('../../images/market-601580_1280.jpg') no-repeat center fixed;
     -webkit-background-size: cover;
@@ -108,14 +134,7 @@ body {
   .page {
     background-color: rgba(58, 58, 255, 0.281);
   }
-  
-  .active {
-    background-color: rgb(62, 62, 255) !important;
-  }
-  #logOut {
-   
-    margin: 10px;
-  }
+ 
   .top-back {
     margin-top: 10px;
   }
@@ -135,14 +154,21 @@ body {
   .login-form {
     padding-top: 20px;
   }
-  
+  .active {
+    background-color: none !important;
+    color: rgb(186, 226, 228);
+  }
+
   .submit {
    margin-bottom: 20px;
   }
-  
+  table {
+    margin-bottom: 10px;
+  }
   .login-bg {
     background-color: rgba(226, 226, 229, 0.712);
   }
   // modal style
  
+  
 
